app/teams/(teams-page)/@content/page.module.css
.team__right__content {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.team__right__toolbar {
  height: 72px;
  /*position: sticky;*/
  z-index: 4;
  /*top: 80px;*/
  padding: 16px;
  border-bottom: 1px solid #e2e8f0;
  background: #fff;
  display: none;
}

.team__right__teamslist {
  min-height: calc(100vh - 280px);
}

@media (min-width: 1024px) {
  .team__right__teamslist {
    margin-top: 0;
    min-height: calc(100vh - 325px);
    padding: 0 16px;
  }

  .team__right__toolbar {
    display: flex;
    height: 60px;
    padding: 10px 40px;
    border: none;
    background: #f1f5f9;
    justify-content: space-between;
    width: 100%;
  }

  .team__right__content {
    gap: 14px;
  }
}

